--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.5.0"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
@@ -29,7 +28,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
     "nodemon": "^3.1.9",
-    "prisma": "^5.7.1",
+    "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
