--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
@@ -30,6 +31,8 @@
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+"typescript": "^5.8.3"
   }
+  
 }
+
